pihole/pihole-service-node.yaml
apiVersion: v1
kind: Service
metadata:
  name: pihole-dns
spec:
  type: NodePort
  ports:
    - name: dns-udp
      protocol: UDP
      port: 53
      targetPort: 53
      nodePort: 53
    - name: dns-tcp
      protocol: TCP
      port: 53
      targetPort: 53
      nodePort: 53
  selector:
    app: pihole
