pihole/pihole-ingress.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: pihole
spec:
  rules:
    - host: "pihole.beetlestone.nz"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pihole
                port:
                  number: 5670
